<resources>
    <string name="app_name">My Class</string>
    <string name="label_must_fill">Required.</string>
    <string name="todo">TODO</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="todo4">TODO</string>
    <string name="name">Name</string>
    <string name="todo5">TODO</string>
    <string name="school">School</string>
    <string name="todo6">TODO</string>
    <string name="phone">Phone</string>
    <string name="colek">Colek</string>
    <string name="chat_whatsapp">Chat WhatsApp</string>
    <string name="todo7">TODO</string>
    <string name="todo8">TODO</string>
    <string name="todo9">TODO</string>
    <string name="login">Login</string>
    <string name="nomor_telephone">Phone Number</string>
    <string name="add_nomor_telephone">Add Phone</string>
    <string name="password">Password</string>
    <string name="password_characters">Password of at least 6 characters</string>
    <string name="succes">Succes</string>
    <string name="register_failed">Register Failed</string>
    <string name="file">This file cannot be used</string>
    <string name="register_loading">Please Wait Register…</string>
    <string name="Gallery">Gallery permission denied</string>
    <string name="add_password">Add Password</string>
    <string name="save_profile">Save Profile</string>
    <string name="save_profile_photo">Save Profile With Photo</string>
    <string name="login2">Login</string>
    <string name="compress">If you fail to compress, you can replace another photo</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign up</string>
    <string name="todo10">TODO</string>
    <string name="todo11">TODO</string>
    <string name="todo12">TODO</string>
    <string name="name2">Name</string>
    <string name="todo13">TODO</string>
    <string name="school2">School</string>
    <string name="todo14">TODO</string>
    <string name="phone2">Phone</string>
    <string name="edit_password">Edit Password</string>
    <string name="logout">Logout</string>
    <string name="register">Register</string>
    <string name="name3">Name</string>
    <string name="add_name">Add Name</string>
    <string name="nomor_telephone2">Phone Number</string>
    <string name="add_nomor_telphone">Add Phone</string>
    <string name="filter_school">School</string>
    <string name="password2">Password</string>
    <string name="add_password3">Add Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="add_confirm_password">Confirm Password</string>
    <string name="register2">Register</string>
    <string name="have_an_accoun_log_in">Have an account?</string>
    <string name="todo15">TODO</string>
    <string name="todo16">TODO</string>
    <string name="marshanda_fitri_riyani">Marshanda Fitri Riyani</string>
    <string name="smk_n_11_semarang">SMK N 11 Semarang</string>
    <string name="enter_a_new_name">Enter A New Name</string>
    <string name="add_name2">Add Name…</string>
    <string name="save">Save</string>
    <string name="password_old">Password Old</string>
    <string name="password_new">Password New</string>
    <string name="confirm_password2">Confirm Password</string>
    <string name="save2">Save</string>
    <string name="filter_school2">Filter School</string>
    <string name="save3">Save</string>
    <string name="do_you_want_logout">Do you want logout?</string>
    <string name="no">No</string>
    <string name="yes_i_want_logout">Yes, i want Logout</string>
    <string name="msg_token_fmt" formatted="true"> %s Token Confirmed</string>
    <string name="select_school">Select School</string>
    <string name="done_colek">Done Colek</string>
    <string name="permission_granted">Permission Granted</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="empty_name">Empty Name</string>
    <string name="empty_school">Empty School</string>
    <string name="empty_phone">Empty Phone</string>
    <string name="loading">Loading…</string>
    <string name="Dont_have_an_account">Dont have an account? Sign up</string>
    <string name="search">Search</string>
    <string name="password_didn_t_match">Password didn\'t match</string>
    <string name="add_school">Add School</string>
    <string name="todo23">TODO</string>
    <string name="log_in">Log In</string>


</resources>