<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/green_30"
        android:orientation="vertical"
        tools:context=".ui.register.RegisterActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_60sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:layout_marginEnd="@dimen/_60sdp"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="@dimen/_20ssp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_60sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_60sdp"
            android:gravity="start"
            android:text="@string/name3"
            android:textColor="@color/white"
            android:textSize="@dimen/_13ssp" />

        <EditText
            android:id="@+id/et_name_register"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_5sdp"
            android:autofillHints="phone"
            android:background="@drawable/custom_layout_frame_green"
            android:hint="@string/add_name"
            android:inputType="textPersonName"
            android:padding="@dimen/_10sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_10ssp"
            tools:ignore="TextFields" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_60sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_60sdp"
            android:gravity="start"
            android:text="@string/nomor_telephone2"
            android:textColor="@color/white"
            android:textSize="@dimen/_13ssp" />

        <EditText
            android:id="@+id/et_phone_register"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_5sdp"
            android:autofillHints="phone"
            android:background="@drawable/custom_layout_frame_green"
            android:hint="@string/add_nomor_telphone"
            android:inputType="phone"
            android:padding="@dimen/_10sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_10ssp"
            tools:ignore="TextFields" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_60sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_60sdp"
            android:gravity="start"
            android:text="@string/filter_school"
            android:textColor="@color/white"
            android:textSize="@dimen/_13ssp" />


        <AutoCompleteTextView
            android:id="@+id/autoCompleteSpinner"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_gravity="center"
            android:background="@drawable/custom_layout_frame_green"
            android:drawableEnd="@drawable/ic_baseline_arrow_drop_down_24"
            android:dropDownAnchor="@id/autoCompleteSpinner"
            android:hint="@string/select_school"
            android:padding="@dimen/_8sdp"
            android:textSize="@dimen/_10ssp" />


        <!--     <Spinner
                 android:id="@+id/et_filter_school_register"
                 android:layout_width="@dimen/_200sdp"
                 android:layout_height="@dimen/_35sdp"
                 android:layout_gravity="center"
                 android:layout_marginTop="@dimen/_5sdp"
                 android:background="@drawable/custom_layout_frame_green"
                 android:drawableEnd="@drawable/ic_baseline_arrow_drop_down_24"
                 android:hint="Add School"
                 android:padding="@dimen/_8sdp"
                 android:textSize="@dimen/_10ssp"
                 android:entries="@array/filter_school"
                  />-->

        <!-- <Spinner
             android:id="@+id/et_filter_school_register"
             android:layout_width="@dimen/_200sdp"
             android:layout_height="@dimen/_35sdp"
             android:layout_gravity="center"
             android:layout_marginTop="@dimen/_5sdp"
             android:background="@drawable/custom_layout_frame_green"
             android:drawableEnd="@drawable/ic_baseline_arrow_drop_down_24"
             android:entries="@array/filter_school"
             android:gravity="center"
             android:padding="@dimen/_8sdp"
             android:textSize="@dimen/_10ssp" />-->


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_60sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_60sdp"
            android:gravity="start"
            android:text="@string/password2"
            android:textColor="@color/white"
            android:textSize="@dimen/_13ssp" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_gravity="center"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/et_password_register"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_5sdp"
                android:autofillHints="password"
                android:background="@drawable/custom_layout_frame_green"
                android:drawablePadding="@dimen/_8sdp"
                android:hint="@string/add_password3"
                android:inputType="textPassword"
                android:padding="@dimen/_10sdp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="@dimen/_10ssp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_60sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_60sdp"
            android:gravity="start"
            android:text="@string/confirm_password"
            android:textColor="@color/white"
            android:textSize="@dimen/_13ssp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputConfirmPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_gravity="center"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/et_confirm_password_register"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_5sdp"
                android:autofillHints="password"
                android:background="@drawable/custom_layout_frame_green"
                android:drawablePadding="@dimen/_8sdp"
                android:hint="@string/add_confirm_password"
                android:inputType="textPassword"
                android:padding="@dimen/_10sdp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="@dimen/_10ssp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvPasswordNotMatch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_60sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_60sdp"
            android:gravity="start"
            android:text="@string/password_didn_t_match"
            android:textColor="@color/text_red"
            android:textSize="@dimen/_12ssp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputConfirmPassword" />


        <TextView
            android:id="@+id/btn_register"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_30ssp"
            android:background="@drawable/custom_bg_btn_satu"
            android:gravity="center"
            android:text="@string/register2"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_15ssp" />

        <TextView
            android:id="@+id/tv_log_in_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:foreground="?selectableItemBackground"
            android:gravity="center"
            android:text="@string/have_an_accoun_log_in"
            android:textColor="@color/white"
            android:textSize="@dimen/_13ssp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_60sdp"
            android:contentDescription="@string/todo15"
            android:src="@drawable/img_ellipse" />
    </LinearLayout>
</layout>
