<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.login.LoginActivity">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_180sdp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/todo8"
            android:src="@drawable/custome_background" />

        <ImageView
            android:layout_width="@dimen/_120sdp"
            android:layout_height="@dimen/_120sdp"
            android:layout_marginStart="@dimen/_100sdp"
            android:layout_marginTop="@dimen/_110sdp"
            android:contentDescription="@string/todo9"
            android:src="@drawable/img_logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_235sdp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_60sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_60sdp"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="@color/black"
                android:textSize="@dimen/_20ssp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_60sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_60sdp"
                android:gravity="start"
                android:text="@string/nomor_telephone"
                android:textColor="@color/black"
                android:textSize="@dimen/_13ssp" />

            <EditText
                android:id="@+id/et_phone"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_5sdp"
                android:autofillHints="phone"
                android:background="@drawable/custom_layout_frame_abu"
                android:hint="@string/add_nomor_telephone"
                android:inputType="phone"
                android:padding="@dimen/_10sdp"
                android:textSize="@dimen/_10ssp"
                tools:ignore="TextFields" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_60sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_60sdp"
                android:gravity="start"
                android:text="@string/password"
                android:textColor="@color/black"
                android:textSize="@dimen/_13ssp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_gravity="center"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="@dimen/_200sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:autofillHints="password"
                    android:background="@drawable/custom_layout_frame_abu"
                    android:drawablePadding="@dimen/_8sdp"
                    android:hint="@string/add_password"
                    android:inputType="textPassword"
                    android:padding="@dimen/_10sdp"
                    android:singleLine="true"
                    android:textSize="@dimen/_10sdp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/btn_login"
                android:layout_width="@dimen/_120sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/_30sdp"
                android:background="@drawable/custom_bg_btn_satu"
                android:foreground="?selectableItemBackground"
                android:text="@string/login2"
                android:textAllCaps="false"
                android:textSize="@dimen/_15ssp" />

            <TextView
                android:id="@+id/tv_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:gravity="center"
                android:text="@string/don_t_have_an_accoun_sign_up"
                android:textColor="@color/green"
                android:textSize="@dimen/_13ssp" />
        </LinearLayout>
    </RelativeLayout>
</layout>