<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="user"
            type="com.maruchan.myclass.data.room.user.User" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:background="@color/transparent"
            app:cardCornerRadius="@dimen/_15sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_layout_frame_green"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:text="@string/enter_a_new_name"
                    android:textColor="@color/green"
                    android:textSize="@dimen/_15ssp" />

                <EditText
                    android:id="@+id/et_add_name_nw"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_8sdp"
                    android:autofillHints="username"
                    android:hint="@string/add_name2"
                    android:inputType="textPersonName"
                    android:paddingStart="@dimen/_5sdp"
                    android:text='@{user.nama}'
                    android:textSize="@dimen/_15ssp"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/btn_save"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/_8sdp"
                    android:background="@drawable/custom_buttom_popup"
                    android:gravity="center"
                    android:text="@string/save"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</layout>