<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_layout_frame_green"
                android:orientation="vertical"
                android:padding="@dimen/_15sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:text="@string/password_old"
                    android:textColor="@color/green"
                    android:textSize="@dimen/_15ssp" />

                <EditText
                    android:id="@+id/et_password_old"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_8sdp"
                    android:autofillHints="password"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15ssp"
                    tools:ignore="LabelFor" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:text="@string/password_new"
                    android:textColor="@color/green"
                    android:textSize="@dimen/_15ssp" />

                <EditText
                    android:id="@+id/et_password_new"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_8sdp"
                    android:autofillHints="password"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15ssp"
                    tools:ignore="LabelFor" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:text="@string/confirm_password2"
                    android:textColor="@color/green"
                    android:textSize="@dimen/_15ssp" />

                <EditText
                    android:id="@+id/konfirmasi_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_8sdp"
                    android:autofillHints="password"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15ssp"
                    tools:ignore="LabelFor" />

                <TextView
                    android:id="@+id/btn_save_password"
                    android:layout_width="@dimen/_240sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:background="@drawable/custom_buttom_popup"
                    android:foreground="?selectableItemBackground"
                    android:text="@string/save2"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</layout>
