<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:background="@color/transparent"
            app:cardCornerRadius="@dimen/_15sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_135sdp"
                android:background="@drawable/custom_layout_frame_green"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/do_you_want_logout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:gravity="center"
                    android:text="@string/do_you_want_logout"
                    android:textColor="@color/green"
                    android:textSize="@dimen/_15ssp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_35sdp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/btn_no"
                        android:layout_width="@dimen/_90sdp"
                        android:layout_height="@dimen/_35sdp"
                        android:layout_gravity="center"
                        android:background="@drawable/custom_buttom_popup_dua"
                        android:foreground="?selectableItemBackground"
                        android:gravity="center"
                        android:text="@string/no"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_13ssp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/btn_yes"
                        android:layout_width="@dimen/_130sdp"
                        android:layout_height="@dimen/_35sdp"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:background="@drawable/custom_buttom_popup"
                        android:foreground="?selectableItemBackground"
                        android:gravity="center"
                        android:text="@string/yes_i_want_logout"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_13ssp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</layout>
